Fix footer color contrast on desktop

--- a/themes/transition.eco/assets/css/main.css
+++ b/themes/transition.eco/assets/css/main.css
@@ -136,7 +136,7 @@ body {
 .secondary-nav,
 .site-main,
 .site-footer {
-    padding: 0rem;
+    padding: 0;
 }
 
 .site-main {
@@ -194,7 +194,7 @@ body {
 .site-footer {
     grid-area: site-footer-area;
     background-color: var(--primary-color);
-    color: lightgray;
+    color: var(--light-gray);
 }
 
 .primary-nav-toggle:hover,
